--- a/doc/prompts/auth-tool.mdx
+++ b/doc/prompts/auth-tool.mdx
@@ -238,4 +238,26 @@ Save `result.Data.StaticDomain` as `staticDomain`.
     "action": "ModifyProvider"
 }
 ```
+
+### 8. Get Publishable Key
+
+**Query existing key**:
+```js
+{
+    "params": { "EnvId": `env`, "KeyType": "publish_key", "PageNumber": 1, "PageSize": 10 },
+    "service": "lowcode",
+    "action": "DescribeApiKeyTokens"
+}
+```
+Return `PublishableKey.ApiKey` if exists (filter by `Name == "publish_key"`).
+
+**Create new key** (if not exists):
+```js
+{
+    "params": { "EnvId": `env`, "KeyType": "publish_key", "KeyName": "publish_key" },
+    "service": "lowcode",
+    "action": "CreateApiKeyToken"
+}
+```
+If creation fails, direct user to: "https://tcb.cloud.tencent.com/dev?envId=`env`#/env/apikey"
 ````
