docs(prompts): rename AI 提示词 to AI Skill in documentation
- Update sidebar label from 'AI 提示词' to 'AI Skill'
- Update documentation references to use 'AI Skill' terminology
- Update generate-prompts.mjs script to use 'AI Skill' label
- Keep README banner text as 'AI 提示词' for consistency

--- a/doc/prompts/auth-nodejs.mdx
+++ b/doc/prompts/auth-nodejs.mdx
@@ -17,7 +17,7 @@
 
 ### 方式 2：使用项目模板（推荐）
 
-模板已内置 CloudBase MCP 配置和 AI 提示词规则。查看[项目模板](/ai/cloudbase-ai-toolkit/templates)了解更多。
+模板已内置 CloudBase MCP 配置和 AI Skill 规则。查看[项目模板](/ai/cloudbase-ai-toolkit/templates)了解更多。
 
 ### 测试提示词
 
