--- a/doc/prompts/how-to-use.mdx
+++ b/doc/prompts/how-to-use.mdx
@@ -1,9 +1,9 @@
 import IDESelector from '../components/IDESelector';
 import PromptScenarios from '../components/PromptScenarios';
 
-# 如何使用提示词
+# 如何使用 Skill
 
-本文档介绍如何在项目中使用 CloudBase AI 提示词。
+本文档介绍如何在项目中使用 CloudBase AI Skill。
 
 ## 方式 1：连接 MCP（推荐）
 
@@ -33,6 +33,6 @@ import PromptScenarios from '../components/PromptScenarios';
 - **Zed**: 使用 `/file`，然后选择文件
 - **其他工具**: 参考工具的文档了解如何包含文件
 
-## 可用的提示词场景
+## 可用的 Skill 场景
 
 <PromptScenarios />
