--- a/doc/prompts/web-development.mdx
+++ b/doc/prompts/web-development.mdx
@@ -4,9 +4,9 @@ Web 前端项目开发规则和静态托管部署
 
 ## 如何使用
 
-查看[如何使用提示词](/ai/cloudbase-ai-toolkit/prompts/how-to-use)了解详细的使用方法。
+查看[如何使用Skill](/ai/cloudbase-ai-toolkit/prompts/how-to-use)了解详细的使用方法。
 
-### 测试提示词
+### 测试 Skill
 
 你可以使用以下提示词来测试：
 
@@ -17,7 +17,7 @@ import AIDevelopmentPrompt from '../components/AIDevelopmentPrompt';
 
 <AIDevelopmentPrompt ruleId="web-development" />
 
-## 提示词
+## Skill 
 
 ````markdown title="rule.md"
 ## When to use this skill
